--- a/public/404.html
+++ b/public/404.html
@@ -27,6 +27,14 @@
       <br><br>
       <a class='regresar' href="https://xiperafa.github.io/AhilloPage/">Haz clic aquí para Regresar a la página:</a> 
       <a href="https://xiperafa.github.io/AhilloPage/"> www.arquidiocesisdehermosillo.com</a>
+
     
 </body>
+
+<script>
+
+      window.onload = function() {
+            location.href="https://xiperafa.github.io/AhilloPage"
+      }
+</script>
 </html>
