--- a/public/404.html
+++ b/public/404.html
@@ -30,7 +30,7 @@
       }
 </style>
 
-<body style="background-color: rgb(209, 175, 175);">
+<body>
       <br><br>
       <a class='regresar' href="https://xiperafa.github.io/AhilloPage/">Haz clic aquí para Regresar a la página:</a> 
       <a href="https://xiperafa.github.io/AhilloPage/"> www.arquidiocesisdehermosillo.com</a>
